// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/pages/phonebook render a phonebook with people 1`] = `
<section
  class="page"
  id="directory"
>
  <header>
    <label
      for="search"
    >
      <input
        autocomplete="off"
        id="search"
        placeholder="Search phonebook"
        type="search"
      />
       
      <svg
        class="search"
      >
        <use
          xlink:href="#search"
        />
      </svg>
    </label>
     
    <h1>
      Phonebook
    </h1>
     
    <router-link
      id="logo"
      to="/"
    >
      <svg
        class="realness"
      >
        <use
          xlink:href="#realness"
        />
      </svg>
    </router-link>
  </header>
   
  <nav
    class="profile-index"
    id="phonebook"
  >
    <li>
      <figure
        class="profile"
        itemscope="itemscope"
        itemtype="/person"
      >
        <meta
          itemprop="created_at"
        />
         
        <meta
          itemprop="updated_at"
        />
         
        <a
          href="/profiles/+16282281824"
        >
          <svg>
            <use
              itemprop="image"
              xlink:href="#silhouette"
            />
          </svg>
        </a>
         
        <figcaption>
          <p>
            <span
              itemprop="first_name"
            >
              Scott
            </span>
             
            <span
              itemprop="last_name"
            >
              Fryxell
            </span>
          </p>
           
          <a
            data-value="+16282281824"
            href="sms:+1+16282281824"
            itemprop="mobile"
          >
            +1 628 228 1824
          </a>
        </figcaption>
      </figure>
       
      <menu>
        <!---->
         
        <a>
          <svg
            class="add"
          >
            <use
              xlink:href="#add"
            />
          </svg>
        </a>
      </menu>
    </li>
    <li>
      <figure
        class="profile"
        itemscope="itemscope"
        itemtype="/person"
      >
        <meta
          itemprop="created_at"
        />
         
        <meta
          itemprop="updated_at"
        />
         
        <a
          href="/profiles/+12403800385‬"
        >
          <svg>
            <use
              itemprop="image"
              xlink:href="#silhouette"
            />
          </svg>
        </a>
         
        <figcaption>
          <p>
            <span
              itemprop="first_name"
            >
              Katie
            </span>
             
            <span
              itemprop="last_name"
            >
              Caffey
            </span>
          </p>
           
          <a
            data-value="+12403800385‬"
            href="sms:+1+12403800385‬"
            itemprop="mobile"
          >
            +1 240 380 0385
          </a>
        </figcaption>
      </figure>
       
      <menu>
        <!---->
         
        <a>
          <svg
            class="add"
          >
            <use
              xlink:href="#add"
            />
          </svg>
        </a>
      </menu>
    </li>
  </nav>
   
  <footer>
    <menu>
      <router-link
        to="/relations"
      >
        Done
      </router-link>
    </menu>
  </footer>
</section>
`;

exports[`@/pages/phonebook render an empty phonebook 1`] = `
<section
  class="page"
  id="directory"
>
  <header>
    <label
      for="search"
    >
      <input
        autocomplete="off"
        id="search"
        placeholder="Search phonebook"
        type="search"
      />
       
      <!---->
    </label>
     
    <h1>
      Phonebook
    </h1>
     
    <!---->
  </header>
   
  <!---->
   
  <footer>
    <menu>
      <router-link
        to="/relations"
      >
        Done
      </router-link>
    </menu>
  </footer>
</section>
`;
